# rust-splitter

./: Cargo.toml  README.md  build.ps1  run.ps1
batch/ps1/: build.ps1  run_large.ps1  run_regex.ps1  run_regex_small.ps1
data/: acl_object_identity.csv  acl_permission.csv  authorities.csv  tb_country.csv  tb_event_small.csv
src/: cli.rs  main.rs  process_chunks.rs  split_data.rs  tests.rs
