[package]
name = "splitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utf8-read = "0.4.0"
glob = "0.3.0"
regex = "1.5"
fancy-regex = "0.10.0"
lazy_static = "1.3.0"
substring = "1.4.5"
clap = { version = "3.0", features = ["derive"] }